chore: add navigation

--- a/client/src/css/variables.css
+++ b/client/src/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --color: #fff;
+    --fondoNormal: white;
     --fondoBotonPrimario: #09090B;
     --fondoBotonSecundario: #FAFAFA;
     --fuenteOscuro: #87878E;
