--- a/client/src/css/variables.css
+++ b/client/src/css/variables.css
@@ -2,17 +2,19 @@
     --fondoNormal: white;
     --fondoBotonPrimario: #09090B;
     --fondoBotonSecundario: #FAFAFA;
+    --fuenteBotonPrimario: #fff;
+    --fuenteBotonSecundario: #222225;
     --fuenteOscuro: #87878E;
     --fuenteNormal: #0F172A;
     --colorSelecion: #3F3F45;
-    --colorSelecicn2: #E11D48;
+    --colorSeleccion2: #E11D48;
     --colorSelecion3: #3B82F6;
     --colorSelecion4: #22C55E;
     --colorSelecion5: #EA580C;
     --colorSeleccion6: #6D28D9;
     --trazo: #E6EBF1;
     --colorMenu: #E2E8F0;
-    --h1-fontsize: 3rem;
-    --h2-fontsize: 1.5rem;
-    --text-fontSize: .8rem;
+    --h1-fontsize: 2rem;
+    --h2-fontsize: 1.2rem;
+    --text-fontSize: .9rem;
 }
