--- a/client/src/css/catalogo.css
+++ b/client/src/css/catalogo.css
@@ -1,10 +1,103 @@
 .catalogo {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 18px;
+    gap: 20px;
+    min-width: 95%;
+    overflow-y: scroll;
+    position: relative;
+    padding: 18px 10px 0 10px;
 }
 
 .catalogo__box {
-    min-width: 95%;
+    border: 2px solid var(--trazo);
+    border-radius: calc(0.5rem - 2px);
+    padding: 20px;
+    width: 100%;
+}
+
+.catalogo__footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.catalogo__separator-box{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.catalogo__separator {
+    width: 2px;
+    height: 100%;
+    background-color: var(--trazo);
+}
+
+.catalogo__columns {
+    display: grid;
+    grid-template-columns: 430px 430px 350px 150px 1fr;
+    grid-template-rows: 80px 180px;
+    width: 100%;
+}
+
+.catalog__with-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    gap: 10px;
+}
+
+/*Nombre*/
+.catalogo__columns > div:nth-of-type(1) {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+/*Modelo & categoria*/
+.catalogo__columns > div:nth-of-type(2) {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 20px;
+    grid-area: 2 / 1 / 3 / 2;
+} 
+
+/*Seleccionar color*/
+.catalogo__columns > div:nth-of-type(3){
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+/*Seleccionar tanaño*/
+.catalogo__columns > div:nth-of-type(4){
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    grid-area: 1 / 2 / 2 / 3 ;
+}
+
+/*Descripcion*/
+.catalogo__columns > div:nth-of-type(5){
+    grid-area: 1 / 3 / 3 / 4;
+}
+
+/*Separador*/
+.catalogo__columns > div:nth-of-type(6){
+    grid-area: 1 / 4 / 3 / 5;
+}
+
+/*Imagnes*/
+.catalogo__columns > div:nth-of-type(7){
+    grid-area: 1 / 5 / 3 / 6;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
