--- a/client/src/css/selectcolor.css
+++ b/client/src/css/selectcolor.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    min-width: 20rem;
+    /* min-width: 14.1rem; */
     gap: 5px;
 }
 
