--- a/client/src/css/selectsize.css
+++ b/client/src/css/selectsize.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    min-width: 20rem;
+    /* min-width: 20rem; */
     gap: 10px;
 }
 
