--- a/client/src/css/catalogo.css
+++ b/client/src/css/catalogo.css
@@ -5,7 +5,6 @@
     align-items: center;
     gap: 20px;
     min-width: 95%;
-    overflow-y: scroll;
     position: relative;
     padding: 18px 10px 0 10px;
 }
@@ -23,6 +22,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    overflow: hidden;
 }
 
 .catalogo__separator-box{
@@ -67,34 +67,29 @@
     grid-area: 2 / 1 / 3 / 2;
 } 
 
-/*Seleccionar color*/
-.catalogo__columns > div:nth-of-type(3){
+/*Tamaño & color*/
+.catalogo__columns > div:nth-of-type(3) {
     display: flex;
+    flex-direction: column;
     justify-content: start;
     align-items: start;
-    grid-area: 2 / 2 / 3 / 3;
-}
-
-/*Seleccionar tanaño*/
-.catalogo__columns > div:nth-of-type(4){
-    display: flex;
-    justify-content: start;
-    align-items: start;
-    grid-area: 1 / 2 / 2 / 3 ;
+    gap: 18px;
+    padding-left: 20px;
+    grid-area: 1 / 2 / 3 / 3;
 }
 
 /*Descripcion*/
-.catalogo__columns > div:nth-of-type(5){
+.catalogo__columns > div:nth-of-type(4){
     grid-area: 1 / 3 / 3 / 4;
 }
 
 /*Separador*/
-.catalogo__columns > div:nth-of-type(6){
+.catalogo__columns > div:nth-of-type(5){
     grid-area: 1 / 4 / 3 / 5;
 }
 
 /*Imagnes*/
-.catalogo__columns > div:nth-of-type(7){
+.catalogo__columns > div:nth-of-type(6){
     grid-area: 1 / 5 / 3 / 6;
     display: flex;
     flex-direction: column;
