--- a/client/src/css/selectsize.css
+++ b/client/src/css/selectsize.css
@@ -1,9 +1,13 @@
-.size-range {
+.size-range, .size-range--column {
     display: flex;
     justify-content: start;
     align-items: center;
-    /* min-width: 20rem; */
     gap: 10px;
+}
+
+.size-range--column {
+    flex-direction: column;
+    align-items: start;
 }
 
 .size-range__label {
@@ -11,6 +15,12 @@
     color: var(--fuenteNormal);
     margin-bottom: 5px;
     font-size: (var(--text-fontSize));
+}
+
+
+.size-range__box-item {
+    display: flex;
+    gap: 10px;
 }
 
 .size-range__item {
