--- a/client/src/css/alertdialog.css
+++ b/client/src/css/alertdialog.css
@@ -1,4 +1,4 @@
-.form-blur {
+.alert-dialog-blur {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,20 +10,20 @@
     bottom: 0;
     right: 0;
     background-color: rgb(0 0 0 / .8);
-    z-index: 1;
+    z-index: 2;
     opacity: 1;
 }
 
-.form {
-    width: 600px;
-    height: 600px;
+.alert-dialog {
+    width: 512px;
+    height: 280px;
     background-color: var(--fondoNormal);
     color: var(--fuenteNormal);
     overflow-y: auto;
     position: relative;
 }
 
-.form__close-btn {
+.alert-dialog__close-btn {
     position:absolute;
     right: 18px;
     top: 12px;
