--- a/client/src/css/edittableinfo.css
+++ b/client/src/css/edittableinfo.css
@@ -1,46 +1,46 @@
-.edit-clientes {
+.edit-table {
     display: flex;
     justify-content: start;
     align-items: start;
     padding-left: 18px;
     padding-right: 18px;
-    padding-top: 24px;
+    padding-top: 48px;
     flex-direction: column;
     width: 100%;
     height: 100%;
     gap: 32px;
 }
 
-.edit-clientes__form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.edit-table__form {
     border: 2px solid var(--trazo);
     border-radius: calc(0.5rem - 2px);
     padding: 20px;
     width: 100%;
 }
 
-.edit-clientes__id {
+.edit-table__content {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.edit-table__content > div {
+    width: 100%;
+    margin-top: 5px;
+}
+
+.edit-table__id {
     display: block;
     width: 100%;
     text-align: end;
 }
 
-.edit-clientes__form > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    gap: 12px;
-}
-
-.edit-clientes__form > div > div {
-    width: 100%;
-}
-
-.edit-clientes__form > footer {
+.edit-table__footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    margin-top: 10px;
 }
