--- a/client/src/css/LoginForm.css
+++ b/client/src/css/LoginForm.css
@@ -14,6 +14,8 @@ flex-basis: 50%;
 .imagen-empresa img{
 max-width: 100%;
 height: 100%;
+object-fit: cover;
+object-position: center;
 }
 
 .formulario-inner h2{
@@ -85,8 +87,7 @@ height: 30px;
 left: 0;
 width: 100%;
 height: 100%;
-background-color: black; /* Para hacer la capa visible */
-opacity: 0.2; 
+background: linear-gradient(0deg, rgba(0,0,4,0.7539390756302521) 50%, rgba(0,3,8,0.12088585434173671) 100%);
 }
 
 a{
